선호도(키, 나이) 설정 기능 추가